@@ -301,4 +301,4 @@ To be added
 
 """
 
-__version__ = '1.0.0beta1'
+__version__ = '1.0.0beta2'
