@@ -1,3 +1,12 @@
+2016-09-01  John Dennis  <jdennis@redhat.com> 1.0.0beta2
+  * Allow custom include root in setup.py as command line arg
+
+  * Add TLS chacha20 poly1305 constants
+
+  * Remove checks for whether a socket is open for reading. It's not
+    possible for the binding to know in all cases, especially if the
+    socket is created from an external socket passed in.
+
 2015-09-03  John Dennis  <jdennis@redhat.com> 1.0.0beta1
   The primary enhancement in this version is support for Python3
   Single code base supports both Py2 (minimum version 2.7) and Py3
